--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mongoose": "^5.2.2"
+    "mongoose": "^5.2.2",
+    "mongoose-timestamp": "^0.6.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
