--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "repository": "https://github.com/victorshinya/continuous-delivery",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha --exit"
   },
   "author": "Victor Kazuyuki Shinya <vshinya@br.ibm.com>",
   "license": "MIT",
